# omgparser

./: README.md  flake.nix  omg.cabal
app/: main.hs
src/: Gui.hs  Omg.hs
src/Parser/: Omg.hs
